# MasterThesis

./: docker-compose.yml
PROJECTS/firmware/: .gitignore  CMakeLists.txt  build.sh  epoch_emu.py  prj.conf  rtc.overlay
PROJECTS/firmware/src/: main.c  rtc_api.c  rtc_api.h
PROJECTS/firmware/src/app/: app_event.c  app_event.h  app_uart.c  app_uart.h
PROJECTS/firmware/src/toolkits/: rtc_api.c  rtc_api.h  uart_api.c  uart_api.h
PROJECTS/fs_sample/: prj.conf  prj.overlay
PROJECTS/fs_sample/src/: main.c
PROJECTS/gnss/: CMakeLists.txt  prj.conf  uart.overlay
PROJECTS/gnss/src/: main.c  uart_api.c  uart_api.h
PROJECTS/hello_world/: prj.conf
PROJECTS/hello_world/src/: main.c
PROJECTS/measurement_hat/: CMakeLists.txt  build.sh  data_parser.py  led0.overlay  prj.conf  prj.overlay  rtc.overlay  rtc_sync.py  spi.overlay  uart.overlay
PROJECTS/measurement_hat/src/: main.c
PROJECTS/measurement_hat/src/toolkits/: bt_api.c  bt_api.h  ina239.c  ina239.h  rtc_api.c  rtc_api.h  sd_card.c  sd_card.h  uart_api.c  uart_api.h
PROJECTS/nrf52_deepsleep/src/: main.c
Thesis/: perspektywy.aux  perspektywy.tex  podsumowanie.aux  podsumowanie.tex  praca.aux  praca.bbl  praca.blg  praca.fdb_latexmk  praca.fls  praca.tex  praca.toc  prototyp.aux  prototyp.tex  testy.aux  testy.tex  wstep.aux  wstep.tex
Weather_api/: .env  get_weather.sh  weather-script.service  weather-script.timer
